fix text align

--- a/client/src/app/components/roms/rom-info/game-description/game-description.component.scss
+++ b/client/src/app/components/roms/rom-info/game-description/game-description.component.scss
@@ -2,6 +2,7 @@
   height: 548.6px;
   overflow-y: auto;
   padding: 1em 20px 20px;
+  text-align: left !important;
   word-wrap: break-word;
   @media only all and (max-width: 938px) {
     height: 300px;
